<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_ai_assistant"
        android:icon="@drawable/ic_ai"
        android:title="@string/ai_bookshelf_assistant"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_books"
        android:icon="@drawable/ic_add"
        android:title="@string/add_books"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_add_local"
                android:icon="@drawable/ic_add"
                android:title="@string/book_local" />
            <item
                android:id="@+id/menu_remote"
                android:icon="@drawable/ic_add"
                android:title="@string/add_remote_book" />
            <item
                android:id="@+id/menu_add_url"
                android:icon="@drawable/ic_add_online"
                android:title="@string/add_url" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_download_line"
        android:title="@string/cache_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_group_manage"
        android:icon="@drawable/ic_groups"
        android:title="@string/group_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_bookshelf_layout"
        android:icon="@drawable/ic_view_quilt"
        android:title="@string/bookshelf_layout"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_bookshelf_backup"
        android:icon="@drawable/ic_backup"
        android:title="@string/bookshelf_backup"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_export_bookshelf"
                android:icon="@drawable/ic_export"
                android:title="@string/export_bookshelf" />
            <item
                android:id="@+id/menu_import_bookshelf"
                android:icon="@drawable/ic_import"
                android:title="@string/import_bookshelf" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_diagnostics"
        android:icon="@drawable/ic_bug_report"
        android:title="@string/diagnostics"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_log"
                android:icon="@drawable/ic_cfg_about"
                android:title="@string/log" />
            <item
                android:id="@+id/menu_network_log"
                android:icon="@drawable/ic_network_check"
                android:title="@string/network_request_log" />
        </menu>
    </item>

</menu>
