<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_tts"
        android:icon="@drawable/ic_tts_headphones"
        android:title="@string/character_tts_bindings"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add_character"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_quick_delete"
        android:checkable="true"
        android:title="@string/character_quick_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/character_reassign"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_restore_temporary"
        android:title="@string/character_restore_deleted"
        app:showAsAction="never" />

</menu>
